--- a/04-analytics-engineering/taxi_rides_ny/dbt_project.yml
+++ b/04-analytics-engineering/taxi_rides_ny/dbt_project.yml
@@ -36,6 +36,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
+  taxi-rides-ny:
     # Applies to all files under models/example/
 
