init dbt project

--- a/04-analytics-engineering/taxi_rides_ny/dbt_project.yml
+++ b/04-analytics-engineering/taxi_rides_ny/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'taxi-rides-ny'
+name: 'taxi_rides_ny'
 version: '1.0.0'
 config-version: 2
 
@@ -36,6 +36,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  taxi-rides-ny:
+  taxi_rides_ny:
     # Applies to all files under models/example/
 
